# cmake-starter

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml  ci.yaml  test.yaml
cmake/: MyMkdirConfig.cmake  MyProject.cmake  MyProjectConfig.cmake
test/: CMakeLists.txt  MkdirRecursive.cmake  MkdirRecursiveTest.cmake  git_clone.cmake  mkdir_recursive.cmake  test_git_clone.cmake
test/cmake/: MkdirRecursiveTest.cmake
